@@ -178,7 +178,7 @@ public class ErlangProjectImportWizardPage extends
 		final GridData buttonData = new GridData(GridData.FILL_HORIZONTAL);
 		button.setLayoutData(buttonData);
 
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.setText(label);
 
 		if (defaultButton) {
